<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mundo1"
    tools:context=".Home">

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_customizado"
        android:onClick="voltar"
        android:text="@string/btnVoltar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_customizado"
        android:onClick="contatos"
        android:text="@string/btnContatos"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_customizado"
        android:clickable="false"
        android:text="@string/btnEnderecos"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtHome"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="52dp"
        android:layout_height="24dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/btn_em_breve"
        android:text="@string/btnEmBreve"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>